--- a/1_profile_extraction.ipynb
+++ b/1_profile_extraction.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This notebook extracts information about person from knowledge graph, creates a summary about that person and saves it as a property of the person node.\n",
     "\n",
-    "You need a .env file which is configured with your neo4j credentials (see knowledge_graph_construction.ipynb) and your OpenAI API key."
+    "You need a .env file which is configured with your neo4j credentials (see 0_knowledge_graph_construction.ipynb) and your OpenAI API key."
    ]
   },
   {
@@ -28,20 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load environment variables\n",
     "load_dotenv()"
@@ -136,18 +125,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #only relevant for single test run\n",
-    "# # Fetch data for a specific employee (example ID)\n",
-    "# employee_data_json = fetch_employee_data(22)\n",
-    "# print(employee_data_json)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -209,12 +186,7 @@
     "\n",
     "    # Generate the summary using the LLM\n",
     "    summary = llm(prompt)\n",
-    "    return summary.content\n",
-    "\n",
-    "# only relevant for single test run\n",
-    "# Generate the profile summary\n",
-    "# profile_summary = generate_profile_summary(employee_data_json)\n",
-    "# print(profile_summary)\n"
+    "    return summary.content\n"
    ]
   },
   {
@@ -244,47 +216,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed employee ID: 1\n",
-      "Processed employee ID: 2\n",
-      "Processed employee ID: 3\n",
-      "Processed employee ID: 4\n",
-      "Processed employee ID: 5\n",
-      "Processed employee ID: 6\n",
-      "Processed employee ID: 7\n",
-      "Processed employee ID: 8\n",
-      "Processed employee ID: 9\n",
-      "Processed employee ID: 10\n",
-      "Processed employee ID: 11\n",
-      "Processed employee ID: 12\n",
-      "Processed employee ID: 13\n",
-      "Processed employee ID: 14\n",
-      "Processed employee ID: 15\n",
-      "Processed employee ID: 16\n",
-      "Processed employee ID: 17\n",
-      "Processed employee ID: 18\n",
-      "Processed employee ID: 19\n",
-      "Processed employee ID: 20\n",
-      "Processed employee ID: 21\n",
-      "Processed employee ID: 22\n",
-      "Processed employee ID: 23\n",
-      "Processed employee ID: 24\n",
-      "Processed employee ID: 25\n",
-      "Processed employee ID: 26\n",
-      "Processed employee ID: 27\n",
-      "Processed employee ID: 28\n",
-      "Processed employee ID: 29\n",
-      "Processed employee ID: 30\n",
-      "Processed employee ID: 31\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with driver.session() as session:\n",
     "        employee_ids = fetch_all_employees(session)\n",
